# runjucks

./: .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NUNJUCKS_PARITY.md  P3_ROADMAP.md  README.md  RELEASING.md  RUNJUCKS_PERF.md  browser.js  express.js  fetch-template-map.d.ts  fetch-template-map.js  index.d.ts  index.js  install-jinja-compat.d.ts  install-jinja-compat.js  package-lock.json  package.json  render-with-callback.d.ts  render-with-callback.js  serialize-context.d.ts  serialize-context.js
.github/workflows/: ci.yml  crates-publish.yml  docs.yml  npm-publish.yml
__test__/: async-render.test.mjs  configure-autoescape.test.mjs  error-cases.test.mjs  express.test.mjs  extensions.test.mjs  install-jinja-compat.test.mjs  interpolation-pending.mjs  json-ingress.test.mjs  loader-api.test.mjs  loader-url-pattern.test.mjs  napi-surface.test.mjs  package-exports.test.mjs  parity.test.mjs  per-template-autoescape-spike.test.mjs  render-with-callback.test.mjs  render.test.mjs  serialize-context.test.mjs  smoke.test.mjs  tags-extended.test.mjs
__test__/conformance/: load-fixtures.mjs  run.mjs
__test__/upstream/: README.md  filters-ported.test.mjs  tests-ported.test.mjs  upstream-harness.mjs
ai_docs/: FFI_OVERHEAD_PROFILE_2026-04-11.md  NUNJUCKS_PARITY.md  PER_TEMPLATE_AUTOESCAPE.md  README.md  RUNJUCKS_PERF.md
docs/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.typedoc.json  typedoc.json
docs/design/: ASYNC_RENDERING.md
docs/src/components/: PerfReport.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/contributing/: index.md  package-managers.md  rust.md
docs/src/content/docs/guides/: architecture.md  development.md  installation.md  javascript-api.md  jinja2-background.md  limitations.md  migrating-from-nunjucks.md  performance.md  performance.mdx  syntax.md
docs/src/data/perf/: index.json
docs/src/data/perf/reports/: 0.1.7.json  0.1.8.json  0.1.9.json
docs/src/styles/: custom.css
native/: Cargo.toml
native/crates/runjucks-core/: Cargo.toml  README.md
native/crates/runjucks-core/benches/: parse_hotspots.rs  render_hotspots.rs
native/crates/runjucks-core/src/: ast.rs  environment.rs  errors.rs  extension.rs  filters.rs  globals.rs  js_regex.rs  lexer.rs  lib.rs  loader.rs  parser.rs  render_common.rs  renderer.rs  tag_lex.rs  value.rs
native/crates/runjucks-core/src/async_renderer/: entry.rs  eval.rs  loops.rs  macros.rs  mod.rs  nodes.rs
native/crates/runjucks-core/src/parser/: expr.rs  mod.rs  split.rs  template.rs
native/crates/runjucks-core/tests/: README.md  async_renderer.rs  cache_correctness.rs  composition.rs  conformance.rs  custom_tags.rs  environment.rs  errors.rs  extensions.rs  filesystem_loader.rs  filters.rs  globals_and_call.rs  import_from.rs  interpolation.rs  is_tests.rs  language_regex.rs  lexer.rs  lexer_control_flow.rs  lexer_strings.rs  lexer_whitespace.rs  parser.rs  parser_expr_edge_cases.rs  parser_expressions.rs  parser_postfix_filters.rs  parser_raw_verbatim.rs  parser_tags.rs  parser_tags_extended.rs  perf_regressions.rs  renderer.rs  renderer_tags_extended.rs  super_call_filter.rs  tag_lex.rs  tag_parity.rs  trim_lstrip_blocks.rs  value.rs
native/crates/runjucks-napi/: Cargo.toml
native/crates/runjucks-napi/src/: lib.rs
native/fixtures/conformance/: README.md  error_cases.json  filter_cases.json  render_cases.json  tag_parity_cases.json
native/src/: ast.rs  errors.rs  lexer.rs  parser.rs
native/src/tests/: README.md  conformance.rs  environment.rs  lexer.rs  lexer_control_flow.rs  lexer_whitespace.rs  parser_expressions.rs  parser_tags.rs  value.rs
perf/: README.md  conformance-allowlist.json  context-boundary.mjs  harness-env.mjs  inmemory-macro-harness.mjs  run-async.mjs  run.mjs  synthetic.mjs
plans/: NEXT_WORK.md  PERF_PARITY_ACTION_PLAN_2026-04-11.md  RENDER_PERF_PLAN_2026-04-12.md  nunjucks-parity-implementation-plan.md
scripts/: check-conformance-allowlist.mjs
src/: ast.rs  environment.rs  errors.rs  filters.rs  lexer.rs  lib.rs  parser.rs  renderer.rs  value.rs
test-shim/: README.md  nunjucks-compat.js
tests/: README.md  environment.rs  errors.rs  filters.rs  interpolation.rs  lexer.rs  parser.rs  renderer.rs
