[package]
name = "runjucks_core"
version = "0.1.3"
edition = "2021"
description = "Pure Rust Nunjucks-compatible template engine core (Runjucks)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nikolay-Pomytkin/runjucks"
documentation = "https://docs.rs/runjucks_core"
keywords = ["nunjucks", "template", "jinja", "templating"]
categories = ["template-engine"]

[lib]
crate-type = ["rlib"]

[dependencies]
nom = "8.0.0"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
