[package]
name = "runjucks-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js NAPI bindings for runjucks (Runjucks)"
license = "MIT"
repository = "https://github.com/Nikolay-Pomytkin/runjucks"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
runjucks_core = { path = "../runjucks-core" }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
