[package]
name = "runjucks-napi"
version = "0.1.8"
edition = "2021"
description = "Node.js NAPI bindings for runjucks (Runjucks)"
license = "MIT"
repository = "https://github.com/Nikolay-Pomytkin/runjucks"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
runjucks_core = { path = "../runjucks-core", features = ["async"] }
napi = { version = "3", features = ["serde-json", "tokio_rt", "async"] }
napi-derive = "3"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.17.0", features = ["serde_impl"], optional = true }

[build-dependencies]
napi-build = "2"

[features]
default = []
# Optional faster JSON parse for **string** context ingress (`renderStringFromJson`). Measure with
# `perf/context-boundary.mjs` before enabling in production builds.
fast-json = ["dep:simd-json"]
